--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -132,7 +132,7 @@
         android:layout_marginTop="172dp"
         android:id="@+id/cl_btn"
         android:layout_marginHorizontal="36dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_header"
+        app:layout_constraintBottom_toTopOf="@id/adView"
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
@@ -220,6 +220,17 @@
             android:layout_height="wrap_content"
             app:drawableTopCompat="@drawable/ic_audio_full" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
