--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -54,18 +54,60 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_by"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:text="By click to “continue” you agree to Privacy"
-        android:textColor="@color/tv_shadow"
-        android:textSize="14sp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn_continue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginBottom="24dp"
+        android:id="@+id/cl_by"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_by"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="By click to “continue” you agree to"
+            android:textColor="@color/tv_shadow"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_marginStart="4dp"
+            android:id="@+id/cl_privacy"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_by"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_privacy"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Privacy"
+                android:textColor="@color/tv_shadow"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <View
+                app:layout_constraintTop_toBottomOf="@id/tv_privacy"
+                android:layout_width="0dp"
+                android:background="@color/tv_shadow"
+                app:layout_constraintEnd_toEndOf="@id/tv_privacy"
+                app:layout_constraintStart_toStartOf="@id/tv_privacy"
+                android:layout_height="1dp"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -82,7 +124,7 @@
         android:progressDrawable="@drawable/progres_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_by" />
+        app:layout_constraintTop_toBottomOf="@id/cl_by" />
 
 
     <TextView
