--- a/app/src/main/res/layout/dialog_choose.xml
+++ b/app/src/main/res/layout/dialog_choose.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/tv_choose"
@@ -69,6 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
+            android:id="@+id/btn_call"
             android:background="@drawable/btn_exit"
             android:elevation="8dp">
 
@@ -110,6 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:id="@+id/btn_video_call"
             android:layout_marginTop="16dp"
             android:background="@drawable/btn_exit"
             android:elevation="8dp">
@@ -152,6 +154,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:id="@+id/btn_live"
             android:layout_marginBottom="12dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/btn_exit"
